[project]
name = "project"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "torch>=2.6.0",
  "torchvision>=0.21.0",
  "torchaudio>=2.6.0",
  "pyright",
  "ipykernel",
  "transformers",
  "datasets",
  "evaluate",
  "jiwer",
  "pynvim",
  "jupyter_client",
  "librosa",
  "numpy",
  "pandas",
  "scikit-learn",
  "matplotlib",
  "seaborn",
  "scipy",
  "torch>=2.0.0",
  "torchvision>=0.15.0",
  "transformers>=4.30.0",
  "ipython",
]

[[tool.uv.index]]
    name = "pytorch-cu118"  # Example for CUDA 11.8
    url = "https://download.pytorch.org/whl/cu118"
    explicit = true

[tool.uv.sources]
    torch = [{ index = "pytorch-cu118" }]
    torchvision = [{ index = "pytorch-cu118" }]
    torchaudio = [{ index = "pytorch-cu118" }]
